# pySigma-backend-logscale

./: LICENSE  README.md  pyproject.toml
sigma/backends/logscale/: __init__.py  logscale.py
sigma/pipelines/logscale/: logscale.py
tests/: test_backend_logscale.py  test_pipelines_logscale.py
